--- a/scilab/modules/xcos/Makefile.am
+++ b/scilab/modules/xcos/Makefile.am
@@ -29,9 +29,12 @@ XCOS_C_SOURCES =
 
 XCOS_CPP_SOURCES = 	src/cpp/callxcos.cpp \
 			src/jni/Xcos.cpp \
-			src/jni/Xcos.hxx
+			src/jni/Xcos.hxx \
+			src/jni/Signal.cpp \
+			src/jni/Signal.hxx
 
-GIWS_WRAPPERS = Xcos.giws.xml
+GIWS_WRAPPERS = Xcos.giws.xml \
+XcosUtils.giws.xml
 
 if GIWS
 BUILT_SOURCES=giws
@@ -40,7 +43,8 @@ endif
 
 GATEWAY_C_SOURCES = sci_gateway/c/gw_xcos.c
 
-GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_Xcos.cpp
+GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_Xcos.cpp \
+sci_gateway/cpp/sci_xcosNotify.cpp
 
 libscixcos_la_CFLAGS= $(JAVA_JNI_INCLUDE) \
 			-I$(top_srcdir)/libs/MALLOC/includes/ \
