add localization dependency

--- a/scilab/modules/xcos/src/c/xcos.vcproj
+++ b/scilab/modules/xcos/src/c/xcos.vcproj
@@ -67,7 +67,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\..\..\..\bin\scilocalization.lib libscilab.lib"
+				AdditionalDependencies="libscilab.lib"
 				OutputFile="../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
 				ModuleDefinitionFile=""
@@ -235,7 +235,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\..\..\..\bin\scilocalization.lib libscilab.lib"
+				AdditionalDependencies="libscilab.lib"
 				OutputFile="../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
 				ModuleDefinitionFile=""
