Remove all non-mandatory header file. See SEP #35 for the rational and the list

--- a/scilab/modules/api_scilab/Makefile.am
+++ b/scilab/modules/api_scilab/Makefile.am
@@ -76,7 +76,6 @@ includes/api_pointer.h \
 includes/api_poly.h \
 includes/api_sparse.h \
 includes/api_string.h \
-includes/api_scilab.h \
-includes/dynlib_api_scilab.h
+includes/api_scilab.h
 
 include $(top_srcdir)/Makefile.incl.am
