--- a/scilab/modules/scicos/Makefile.am
+++ b/scilab/modules/scicos/Makefile.am
@@ -133,9 +133,7 @@ libsciscicos_la_sci_gateway_DATA = sci_gateway/scicos_gateway.xml
 
 #### scicos : include files ####
 libsciscicos_la_includedir=$(pkgincludedir)
-libsciscicos_la_include_HEADERS = includes/intcscicos.h \
-includes/scicos.h \
-includes/gw_scicos.h \
+libsciscicos_la_include_HEADERS = includes/scicos.h \
 includes/scicos-def.h \
 includes/scicos_free.h \
 includes/scicos_malloc.h
